[package]
name = "claude-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
keyring = { version = "3", features = ["apple-native"] }
anyhow = "1.0"
thiserror = "2.0"
anthropic-auth = { version = "0.1.1", features = ["async", "callback-server"] }
rand = "0.8"
webbrowser = "1.1.0"
url = "2.5.8"
oauth2 = "5"
